dashboard/css/custom.css
/*WEATHER WIDGET*/
h2.weather, .fullDay { display:none !important; }
.weatherSummary { padding:0; margin:0; border-radius:5px; box-shadow:2px 2px 2px #ccc;}
.today{
  width:90%; min-height:150px;
  margin:0 20px; padding:0; position:relative; 
  text-shadow:1px 1px #333; 
}
.today p { display:inline-block; margin:0 0 5px; padding:0;  }
.today p:nth-child(3) { position:absolute; left:75px; top:4px; }
.today p:nth-child(3):before { content:"- ";}
.today p:nth-child(4), .today p:nth-child(5), .today p:nth-child(6) { float:left; width:285px;  }
.today p:first-child {display:block; margin:0; }
.today img { display:inline-block; float:left; margin:0 20px 0 0; }

/*DASHBOARD*/
.corefour .block { text-align:center; min-height:40px; }
.corefour .disabled span { color:#c3c3c3; }
.corefour .disabled { background:#e3e3e3; }
.corefour .disabled a {cursor:default; }

.dker.charttoo { background:#fff; }


/*SURVEY FRAMES*/
.survey .m-b-md {
  margin-bottom:10px; 
}
.surveyFrame { 
	padding:10px 0; 
	background:#fff ; 
	border-radius:10px;  
}
.surveyHeader { text-align:center;  }
.survey .submits { 
	clear:both;  
	padding:20px; 
	text-align:Center; 
}
.survey .submits .btn { margin:0 8px; border-radius:3px; box-shadow:1px 1px 3px #999;  }
.survey .submits .progress { 
	width:30%; 
	background-color:#ccc; 
	margin: 0 auto 20px; 
}
.survey .nav-primary .surveys a {
	display:block;
	text-align:center; 
}

.btn-back { display:none } 



/*THE FRUITS*/
.dash_fruits {
  margin:0; padding:0; 
}
.dash_fruits .fruit { 
  margin-top:20px;
  margin-right:20px; 
  text-indent:-5000px;
}


.surveys span { 
	display:block;  
	width:67px; height:88px; 
	position:relative; 
	text-indent:-5000px; 
	margin:0 auto; 
} 
.surveys span:before{
	content:"";
	opacity:.5;
	position:absolute; left:0; top:0; 
	width:67px; height:88px; 
	background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
	transition: .5s opacity;
}

.alert .grapes:before     ,.surveys .grapes		  span:before {background-position:100% -85.5px 	!important;}
.alert .apple:before      ,.surveys .apple			span:before {background-position:100% -171px		!important;}
.alert .orange:before     ,.surveys .orange		  span:before {background-position:100% -256.5px !important;}
.alert .cherry:before     ,.surveys .cherry		  span:before {background-position:100% -342px 	!important;}
.alert .blueberry:before  ,.surveys .blueberry  span:before {background-position:100% -427.5px !important;}
.alert .banana:before     ,.surveys .banana		  span:before {background-position:100% -513px 	!important;}
.alert .longan:before     ,.surveys .longan		  span:before {background-position:100% -598.5px !important;}
.alert .pineappple:before ,.surveys .pineappple span:before {background-position:100% -684px 	!important;}

/*.surveys .active span:before , */
.surveys a:hover span:before{
	background-position-x:0% !important; 
	opacity:.4; 
}

.surveys .completed span:before { 
	background-position-x:0% !important; 
	opacity:1; 
}
#surveyFrame {
  height:70vh;
}

.alert span.fruit {
  display:block;  
  width:67px; height:88px; 
  position:relative; 
  text-indent:-5000px; 
  margin:0 auto; 
}
.alert span.fruit:before{
  content:"";
  opacity:1;
  position:absolute; left:0; top:0; 
  width:67px; height:88px; 
  background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
  background-position-x:0% !important; 
  transition: .5s opacity;
}
.alert .takenext { 
  display:table-cell; 
  margin:12px auto 0;
  font-size:14px;
  line-height:14px;
  padding:10px 0 3px;
  border-bottom:1px solid #3c4144; 
}
.alert .surveyname { 
  display:block; 
  font-size:15px; 
  margin:5px 0;
}

.bg-black .nav li > a[rel*='survey']{
  color:#8287a9 !important;
}

.nav .fruit {
  display:inline-block; 
  width:34px; height:44px; 
  vertical-align: middle;
  position: relative;
}

.nav .fruit:before{
  position:absolute; 
  content:"";
  left:0px; 
  width:34px; height:44px; 
  background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
  background-size:67px 390px;
}

.nav .fruit.grapes:before    {background-position:100% -44px  !important;}
.nav .fruit.apple:before     {background-position:100% -88px  !important;}
.nav .fruit.orange:before    {background-position:100% -132px !important;}
.nav .fruit.cherry:before    {background-position:100% -176px !important;}
.nav .fruit.blueberry:before {background-position:100% -220px !important;}
.nav .fruit.banana:before    {background-position:100% -264px !important;}
.nav .fruit.longan:before    {background-position:100% -308px !important;}
.nav .fruit.pineappple:before{background-position:100% -352px !important;}

.nav .completed.fruit:before { 
  background-position-x:0% !important; 
  opacity:1; 
}




/*SESSION ALERT*/
.alert-info { 
  background:#f0f8ff;
}
.alert-danger { 
  /*background:#f0f8ff;*/
}
.alert-success { 
  /*background:#f0f8ff;*/
}
.alert{
  position:fixed;
  top:35%; left:50%;
  transform: translateY(-50%); 
  width:40%;
  margin-left:-20%;
  /*transition: .9s top ease;*/
  z-index:1100;
  box-shadow: 0 0 3px #000;
}
.alert + section {
  position:relative;
}
.alert + section:before {
  position:absolute;
  content:"";
  top:0; left:0; right:0; bottom:0;
  width:100%; height:100%;
  opacity:.4;
  background:#333;
  z-index:100;
}
.alert a { 
  text-decoration:none; 
}
.alert ul {     
  margin: 20px 40px 40px; padding:0 0 20px; 
}

.alert.multi-message ul {
  list-style:disc;
}
.alert.multi-message li {     
  display:block; 
}

.alert.text-center ul {
  list-style:none; 
  margin: 30px 40px 50px;
}
.alert .btn {
  position:fixed;
  bottom:15px; 
  left:50%; 
  width:80px; 
  margin-left:-40px;

}

/*disabled overide sidenav*/
.nav-primary a.disabled { 
	background:#12131a !important; 
	color:#8287a9 !important;
	cursor:default; 
}

.nav-primary ul.nav > li > a > .badge {
  position:absolute; 
  right:10px; top:10px;
}

